# linen

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  arch  eslint.config.mjs  main.ln  package.json  rollup.config.cjs  rustfmt.toml  tsconfig.build.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
.kimi/skills/compiler-design/: SKILL.md
.kimi/skills/frp-linen/: SKILL.md
.kimi/skills/rust-audio/: SKILL.md
.kimi/skills/type-systems/: SKILL.md
benchmarks/: batch.js  comparison.js  complex.js  disposal.js  events.js  index.js  real-world.js
compiler/: Cargo.toml
compiler/src/: error.rs  main.rs
compiler/src/lexer/: scanner.rs  token.rs
compiler/src/parser/: ast_node.rs  mod.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/compiler/: Cargo.toml
crates/compiler/src/: error.rs  lib.rs
crates/daw/: Cargo.toml
crates/lang/: Cargo.toml
crates/lang/src/: lexer.rs  lib.rs
crates/plugins/: Cargo.toml
crates/stdlib/: Cargo.toml
crates/stdlib/src/: lib.rs
crates/vm/: Cargo.toml
crates/vm/src/: error.rs  lib.rs  vm.rs
docs/: architecture.md  cross-reference.md  index.md  language-spec.md  linen.md  roadmap.md  syntax-summary.md
docs/.vitepress/: config.mjs
docs/.vitepress/theme/: custom.css  index.mjs
docs/api/: batch.md  computed.md  disposal.md  effect.md  events.md  fragment.md  index.md  signal.md  untrack.md
docs/examples/: index.md
docs/guide/: getting-started.md  index.md  reactivity.md
playground/: index.html  main.ts  main.tsx
playground/src/: batch.ts  disposal.ts  events.ts  signal.ts
scripts/: generate-csv.js  run-all-benchmarks.js
src/: exec.rs  index.ts  jsx-runtime.ts  jsx.d.ts  lib.rs  main.rs
src/compiler/: mod.rs  parser.rs  scanner.rs  token.rs  utils.rs
src/core/dom/: fragment.ts  h.ts  index.ts  insert.ts  render.ts
src/core/events/: eventEffect.ts  eventSignal.ts  index.ts  pubsub.ts  types.ts
src/core/signals/: computed.ts  index.ts  resource.ts  signal.ts
src/vm/: mod.rs
src/vm/chunk/: debug.rs  memory.rs  mod.rs  object.rs  table.rs  value.rs
src/vm/native/: mod.rs
tests/dom/: fragment.test.ts  h.test.ts  insert.test.ts  render.test.ts
tests/pubsub/: pubsub.test.ts
tests/signals/: batch.test.ts  computed.test.ts  disposal.test.ts  effect.test.ts  integration.test.ts  signal.test.ts  utils.test.ts
