[package]
name = "linen-compiler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "MIT"
repository = "https://github.com/theosovv/linen"
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Linen language compiler - lexer, parser, type checker, and code generation"

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true

# Parser
chumsky = { version = "1.0.0-alpha.7", features = ["label", "extension"] }

# Interning
lasso = { version = "0.7", features = ["multi-threaded"] }

[dev-dependencies]
proptest.workspace = true
insta = { version = "1.34", features = ["yaml"] }
