[package]
name = "linen-vm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "MIT"
repository = "https://github.com/theosovv/linen"
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Linen virtual machine - bytecode execution and audio processing"

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true

# Lock-free data structures
crossbeam = "0.8"
crossbeam-queue = "0.3"

# Real-time safe collections
thin-vec = "0.2"

# SIMD
portable-atomic = "1.6"

[dev-dependencies]
proptest.workspace = true
criterion = { version = "0.5", features = ["html_reports"] }


